# scraping-houses

./: .gitignore  pyproject.toml  trace.py
migrations/: env.py
migrations/versions/: 25bb462f9ba7_new_model_using_request.py  337994a613f4_new_model_using_request.py  4aec9dd41664_create_houses_vivareal_table.py  84d95f0415d3_new_model_using_request.py  8a185454600e_initial_migration.py
scraping_houses/: database.py  main.py  models.py  schemas.py  scraper.py  settings.py  test.py  utils.py
scraping_houses/scrapings/: vivareal.py
tests/: conftest.py  test_scraper.py
