[tool.poetry]
name = "scraping-houses"
version = "0.1.0"
description = ""
authors = ["Fabio Souza <fabiohcsouza@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
parsel = "^1.9.1"
geopy = "^2.4.1"
sqlalchemy = "^2.0.31"
rich = "^13.7.1"
typer = "^0.12.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
nicegui = "^1.4.30"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
