[tool.poetry]
name = "scraping-houses"
version = "0.1.0"
description = ""
authors = ["Fabio Souza <fabiohcsouza@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
parsel = "^1.9.1"
geopy = "^2.4.1"
sqlalchemy = "^2.0.31"
rich = "^13.7.1"
typer = "^0.12.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
nicegui = "^1.4.30"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.5"
httpx = "^0.27.0"

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'python scraping_houses/main.py'
cli = 'python scraping_houses/cli.py'
server = 'fastapi scraping_houses/app.py
dev = 'fastapi dev scraping_houses/app.py
post_test = 'coverage html'
test = 'pytest -s -x --cov=scraping_houses -vv'
post_test = 'coverage html'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
